--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,32 +19,32 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
         <activity
-            android:name="com.valentines.zipperlock.SettingActivity"
+            android:name=".SettingActivity"
             android:excludeFromRecents="true"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="com.valentines.zipperlock.LockscreenActivity"
+            android:name=".LockscreenActivity"
             android:excludeFromRecents="true"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
 
-        <service android:name="com.valentines.zipperlock.service.LockscreenService" />
-        <service android:name="com.valentines.zipperlock.service.LockscreenViewService" />
+        <service android:name=".service.LockscreenService" />
+        <service android:name=".service.LockscreenViewService" />
 
         <activity
-            android:name="com.valentines.zipperlock.Developerintro"
+            android:name=".Developerintro"
             android:excludeFromRecents="true"
             android:label="@string/title_activity_developerintro"
+            android:parentActivityName=".SettingActivity"
             android:screenOrientation="portrait"
-            android:parentActivityName="com.valentines.zipperlock.SettingActivity"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.valentines.zipperlock.SettingActivity" />
         </activity>
         <activity
-            android:name="com.valentines.zipperlock.Splash"
+            android:name=".Splash"
             android:excludeFromRecents="true"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
@@ -63,6 +63,8 @@
             android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:theme="@android:style/Theme.Translucent" />
+        <activity android:name=".AboutActivity" />
+        <activity android:name=".ImageActivity"></activity>
     </application>
 
 </manifest>
